go-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-app.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-app-svc
            port: 
              number: 80

# ingressClassName: for the ingress resource to be identified by the ingress controller (dev/prod/etc)
